@@ -173,7 +173,7 @@
         <TR>
           <TD class="scriptcommand">DoScript #<br />
             DoMacro #</TD>
-          <TD>Switches to given script <b>#</b>./&nbsp; <br>Not from Python.</TD>
+          <TD>Switches to given script <b>#</b>.&nbsp; <br>Not from Python.</TD>
         </TR>
         <TR>
           <TD class="scriptcommand">CallScript # [arg1 arg2 ...]<br />
